refactor: simplify FuncionarioReadService logic and enhance entity specification readability